# Cosmos-Admin

./: .gitignore  2025-12-16-caveat-the-messages-below-were-generated-by-the-u.txt  Dockerfile  README.md  SETUP.md  TESTING.md  alembic.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
alembic/: env.py
alembic/versions/: 945ac8750af8_initial_schema.py  aa885811ca9c_initial_schema.py  b7c8d9e0f1a2_add_module_fields_and_client_modules.py  d4e5f6a7b8c9_add_tenant_products_and_unlock_flag.py  d5cb9d36199d_add_invitations_table.py  e5f6a7b8c9d0_fix_existing_products_visibility.py
docker/: Dockerfile  docker-compose.yml
scripts/: seed_admin.py  seed_modules.py  seed_roles.py  seed_test_clients.py
src/: __init__.py  main.py
src/api/: deps.py
src/app/: layout.tsx
src/components/: language-selector.tsx  notifications-popover.tsx  providers.tsx
src/contexts/: auth-context.tsx  chat-context.tsx  language-context.tsx
src/core/: __init__.py  config.py  logging.py  security.py  tenancy.py
src/db/: __init__.py  base.py  session.py
src/hooks/: use-api.ts
src/integrations/: base.py
src/lib/: api.ts  auth.ts  i18n.ts  utils.ts
src/models/: __init__.py  account.py  audit_log.py  client.py  document.py  holding.py  invitation.py  module.py  product.py  task.py  tenant.py  transaction.py  user.py
src/schemas/: __init__.py  auth.py  client.py  client_task.py  common.py  module.py  product.py  role.py  tenant.py  user.py
src/services/: auth_service.py
src/types/: index.ts
tests/: __init__.py  conftest.py
(+92 files in other folders)
